crates/swc_ecma_parser/tests/flow/invalid_syntax/migrated_0012.js
// No generics for getters and setters
({ set foo<T>(newFoo) {} })
